--- a/app/src/main/res/layout/atualizar_fazenda.xml
+++ b/app/src/main/res/layout/atualizar_fazenda.xml
@@ -160,14 +160,9 @@
 
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:fontFamily="@font/roboto"
             android:text="@string/metas_fazenda"
             android:textAlignment="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="24sp" />
+            style="@style/title_style" />
 
         <TextView
             android:layout_width="match_parent"
