--- a/app/src/main/res/layout/item_list_balanco_patrimonial.xml
+++ b/app/src/main/res/layout/item_list_balanco_patrimonial.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -8,17 +8,21 @@
             type="com.example.agrogestao.models.ItemBalancoPatrimonial" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_margin="1dp"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2.3"
             android:text="@{itemBalanco.nome}"
+            android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
@@ -27,14 +31,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@{itemBalanco.quantidadeString}"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.8"
             android:text="@{itemBalanco.precoString}"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="16sp" />
     </LinearLayout>
 </layout>
