--- a/app/src/main/res/layout/cadastro_fluxo_caixa.xml
+++ b/app/src/main/res/layout/cadastro_fluxo_caixa.xml
@@ -74,17 +74,10 @@
             android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
 
-        <EditText
+        <Spinner
             android:id="@+id/contaCadastroItemFluxoCaixa"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="textPersonName"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            tools:ignore="LabelFor" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="match_parent"
@@ -240,6 +233,7 @@
             android:id="@+id/switchPropriedade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:text="@string/venda_propriedade"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
@@ -274,6 +268,15 @@
                 android:spinnerMode="dialog"
                 android:textAlignment="center" />
         </LinearLayout>
+
+        <Switch
+            android:id="@+id/switchConsumo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="@string/consumo_atividade"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/cadastrarItemFluxoCaixa"
