--- a/app/src/main/res/layout/apresentacao_balanco_patrimonial.xml
+++ b/app/src/main/res/layout/apresentacao_balanco_patrimonial.xml
@@ -64,6 +64,16 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/textAtivoCirculanteBalanco"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/ativo_intro"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
                 android:id="@+id/textPassivoBalanco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
