--- a/app/src/main/res/layout/item_list_balanco_patrimonial.xml
+++ b/app/src/main/res/layout/item_list_balanco_patrimonial.xml
@@ -18,18 +18,18 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2.3"
+            android:layout_weight="1.0"
             android:text="@{itemBalanco.nome}"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:text="@{itemBalanco.quantidadeString}"
             android:textAlignment="center"
             android:textColor="@android:color/black"
@@ -37,9 +37,9 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.8"
+            android:layout_weight="1.5"
             android:text="@{itemBalanco.precoString}"
             android:textAlignment="center"
             android:textColor="@android:color/black"
