--- a/app/src/main/res/layout/resultados_atividades_fazenda.xml
+++ b/app/src/main/res/layout/resultados_atividades_fazenda.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -95,17 +94,13 @@
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/textView44"
-            android:text="@string/despesas_intro"
-            style="@style/title_style" />
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/distribuicao_despesas_chart"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/agroplus_logo_description"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/grafico_ilustrativo" />
+            android:layout_height="300dp"
+            android:layout_margin="8dp"
+            android:padding="8dp" />
+
     </LinearLayout>
 </ScrollView>
