exibição de dados

--- a/app/src/main/res/layout/resultados_atividades_fazenda.xml
+++ b/app/src/main/res/layout/resultados_atividades_fazenda.xml
@@ -15,7 +15,6 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/textView37"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -25,7 +24,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView38"
+            android:id="@+id/lucroResultadoAtivideFazenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -35,7 +34,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView39"
+            android:id="@+id/margemLiquidaAtividadeFazenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -45,7 +44,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView40"
+            android:id="@+id/margemBrutaAtividadeFazenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -55,7 +54,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView43"
+            android:id="@+id/receitaBrutaAtividadeFazenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -65,7 +64,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView41"
+            android:id="@+id/custoTotalAtividadeFazenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -75,7 +74,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView42"
+            android:id="@+id/custoOperacionalTotalAtividadeFazenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -85,7 +84,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView45"
+            android:id="@+id/custoOperacionalEfetivoAtividadeFazenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
