--- a/app/src/main/res/layout/resultados_atividades_fazenda.xml
+++ b/app/src/main/res/layout/resultados_atividades_fazenda.xml
@@ -9,10 +9,6 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="match_parent"
@@ -22,6 +18,17 @@
             android:text="@string/indicadores_economicos"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp" />
+
+        <Spinner
+            android:id="@+id/selecionarAtividadeSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="8dp"
+            android:background="@drawable/spinner_shape"
+            android:gravity="center"
+            android:minWidth="120dp"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/lucroResultadoAtivideFazenda"
