-> Adicionar uma meta observação que aparece um popup mostrando comentários sobre os resultados. Feito -> Adicionar botão do ano anterior. Feito -> Adicionar gráfico de linha fluxo de caixa. FEITO -> Mudar compra para principal. FEITO -> Ano agrícola primeiro julho. FEITO
-> Mexer na qualidade dos gráficos

--- a/app/src/main/res/layout/resultados_fazenda.xml
+++ b/app/src/main/res/layout/resultados_fazenda.xml
@@ -93,12 +93,10 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="24sp" />
 
-                <ImageView
-                    android:id="@+id/imageView3"
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/resultadoAtividadeChart"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/agroplus_logo_description"
-                    app:srcCompat="@drawable/grafico_ilustrativo2" />
+                    android:layout_height="300dp" />
             </LinearLayout>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
