--- a/app/src/main/res/layout/atualizar_fazenda.xml
+++ b/app/src/main/res/layout/atualizar_fazenda.xml
@@ -309,6 +309,21 @@
             android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
+        <TextView
+            style="@style/title_style"
+            android:text="@string/comentarios_intro"
+            android:textAlignment="center" />
+
+        <EditText
+            android:id="@+id/comentariosFazendaEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:ems="10"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            tools:ignore="LabelFor" />
+
         <Button
             android:id="@+id/salvarFazendaButton"
             android:layout_width="250dp"
