--- a/app/src/main/res/layout/fluxo_caixa_atividade.xml
+++ b/app/src/main/res/layout/fluxo_caixa_atividade.xml
@@ -14,26 +14,24 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <TextView
-                android:id="@+id/fluxoCaixaText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:fontFamily="@font/roboto"
-            android:text="@string/fluxo_caixa_atividade"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="32sp" />
+            <Spinner
+                android:id="@+id/spinnerResultadoFluxoCaixa"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/spinner_shape"
+                android:gravity="center" />
 
-        <TextView
-            android:id="@+id/fcaixaSaldoText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:fontFamily="@font/roboto"
-            android:text="@string/saldo_fazenda"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/fcaixaSaldoText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/saldo_fazenda"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
         <TextView
             android:id="@+id/fcaixaReceitasText"
@@ -136,12 +134,10 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="24sp" />
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/fluxoCaixaChart"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/agroplus_logo_description"
-                app:srcCompat="@drawable/grafico_ilustrativo" />
+                android:layout_height="300dp" />
         </LinearLayout>
     </ScrollView>
 </layout>
