Inicio da configuração do banco de dados online

--- a/app/src/main/res/layout/activity_atividades.xml
+++ b/app/src/main/res/layout/activity_atividades.xml
@@ -46,11 +46,12 @@
         android:layout_marginTop="48dp" />
 
     <com.github.clans.fab.FloatingActionMenu
-        android:id="@+id/menu"
+        android:id="@+id/fabMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="10dp"
+        android:visibility="gone"
         fab:menu_animationDelayPerItem="50"
         fab:menu_backgroundColor="@android:color/transparent"
         fab:menu_buttonSpacing="0dp"
