--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
+            android:fontFamily="@font/roboto"
             android:text="@string/forgot_password"
             android:textAlignment="center"
             android:textAllCaps="true"
@@ -99,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@android:color/transparent"
-        android:fontFamily="@font/acme"
+        android:fontFamily="@font/roboto"
         android:text="@string/register_intro"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
