Salvando a fazenda no firebase

--- a/app/src/main/res/layout/atividades_listagem.xml
+++ b/app/src/main/res/layout/atividades_listagem.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="atividade"
-            type="com.example.agrogestao.models.AtividadesEconomicas" />
+            type="com.example.agrogestao.models.realmclasses.AtividadesEconomicas" />
 
     </data>
 
