--- a/app/src/main/res/layout/resultados_fazenda.xml
+++ b/app/src/main/res/layout/resultados_fazenda.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.agrogestao.viewmodel.ResultadosFazendaViewModel" />
+            type="com.example.agrogestao.viewmodel.navigation.ResultadosFazendaViewModel" />
     </data>
 
 
