erro login consertado. Erro reforma consertado.

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -109,7 +109,6 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/round_background_orange"
-            android:onClick="createUser"
             android:padding="16dp"
             android:text="@string/cadastro_intro_value"
             android:textColor="@android:color/white"
@@ -145,7 +144,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
+        android:layout_gravity="center"
         android:layout_marginBottom="32dp"
         android:visibility="invisible"
         tools:visibility="visible" />
