--- a/app/src/main/res/layout/itemlist_programa_fazenda.xml
+++ b/app/src/main/res/layout/itemlist_programa_fazenda.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/programaLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:background="#99d3d3d3"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="4dp">
 
         <TextView
             android:id="@+id/textProgramaFazenda"
@@ -18,6 +21,6 @@
             android:text="TextView"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 </layout>
