--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     tools:context=".view.activities.LoginActivity">
 
     <LinearLayout
+        android:id="@+id/loginLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -36,8 +37,8 @@
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="16dp"
             android:hint="@string/email_intro_value"
-            android:inputType="textWebEmailAddress"
             android:importantForAutofill="no"
+            android:inputType="textWebEmailAddress"
             android:padding="16dp" />
 
         <EditText
@@ -50,8 +51,8 @@
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="16dp"
             android:hint="@string/senha_intro_value"
-            android:inputType="textPassword"
             android:importantForAutofill="no"
+            android:inputType="textPassword"
             android:padding="16dp" />
 
         <Button
