--- a/app/src/main/res/layout/programa_fragment.xml
+++ b/app/src/main/res/layout/programa_fragment.xml
@@ -25,7 +25,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerProgramas"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
